Textarea overflow fix and daily schedule header responsive UI fix

--- a/assets/css/scheduler_styles.css
+++ b/assets/css/scheduler_styles.css
@@ -29,10 +29,6 @@ input{
 	text-align: center;
 }
 
-textarea{
-	resize: none;
-}
-
 button{
 	font-size: 18px;
 	background-color: #ef4048;
@@ -63,7 +59,9 @@ table{
 	border-collapse: collapse;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even) {
+	background-color: #f2f2f2; /*zebra-striping of table rows*/
+}
 
 table td{
 	color: #ef4048;
@@ -104,6 +102,11 @@ table td, th{
 	margin: auto;
 	padding: 24px;
 	gap: 10px;
+}
+
+#noteform textarea{
+	resize: none;
+	width: min(400px, 80%);
 }
 
 .note{
@@ -157,37 +160,49 @@ label {
 	margin: 0 auto;top: 0;
 }
 
-  /*Scheduler landing*/
+/* Daily Schedule */
+#daily-schedule-header{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	gap: 0px;
+}
+
+#left_button{
+	grid-column: 1 / 2;
+}
+
+#date-header{
+	grid-column: 2 / 3;
+}
+
+#right_button{
+	grid-column: 3 / 4;
+}
+
 .scheduler {
 	display: grid; 
-	/*grid-template-rows: 1fr 0.5fr;*/
 	grid-auto-rows: minmax(100px, auto);
 	grid-template-columns: 1fr 1fr;
 	gap: 0px;
 	height: 100%;
- }
+}
    
- #assignments {
+#assignments {
 	border:3px solid #ef4048; 
 	grid-row: 2 / 3; /* grid row start = 2, grid row end = 3*/
 	grid-column: 1 / 2; /* grid col start = 1, grid col end = 2*/
- }
+}
  
- #tasks {
+#tasks {
 	border:3px solid #ef4048;
 	grid-row: 2 / 3; /* grid row start = 2, grid row end = 3*/
 	grid-column: 2 / 3; /* grid col start = 1, grid col end = 2*/
- }
+}
  
- #events {
+#events {
 	border:3px solid #ef4048;
 	grid-row: 1 / 2; /* grid row start = 1, grid row end = 2*/
 	grid-column: 1 / 3; /* grid col start = 1, grid col end = 3*/
- }
-	
-/* Daily Schedule */
-#date-header {
-	display: inline-block;
 }
 
 .progress-bar {
